compelete sidebar in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=”stylesheet” href="bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-   <h1>admin project</h1>
+<body dir="rtl" class="bg-gray-100 font-vazir text-sm">
+   <section class="flex  h-screen  ">
+    <!--sidebar-->
+    <aside class="mt-4 w-1/5 mx-5 flex flex-col justify-between bg-white rounded-t-2xl shadow-lg">
+        <ul>
+            <li class="p-8" >
+                <a>
+                    <img src="../assets/image/services-icon.svg" width="70" class="mx-auto" />
+                </a>
+            </li>
+            <li class="py-5 px-4 text-gray-500 cursor-pointer border-l-4 border-blue-500 bg-gradient-to-l from-white to-blue-100">
+                <figure class="ml-3  inline-block align-middle">
+                    <img src="../assets/image/dashboard.svg" />
+                </figure>
+                <a href="">داشبورد</a>
+            </li>
+            <li class="py-5 px-4 text-gray-500 cursor-pointer">
+                <figure class="ml-3  inline-block align-middle">
+                    <img src="../assets/image/dashboard.svg" />
+                </figure>
+                <a href="">کاربران</a>
+            </li>
+            <li class="py-5 px-4 text-gray-500 cursor-pointer">
+                <figure class="ml-3  inline-block align-middle">
+                    <img src="../assets/image/dashboard.svg" />
+                </figure>
+                <a href="">فرم</a>
+            </li>
+            <li class="py-5 px-4 text-gray-500 cursor-pointer">
+                <figure class="ml-3  inline-block align-middle">
+                    <img src="../assets/image/dashboard.svg" />
+                </figure>
+                <a href="">ورود</a>
+            </li>
+            <li class="py-5 px-4 text-gray-500 cursor-pointer">
+                <figure class="ml-3  inline-block align-middle">
+                    <img src="../assets/image/dashboard.svg" />
+                </figure>
+                <a href="">ثیت نام</a>
+            </li>
+        </ul>
+        <nav class=" py-5 px-4">
+            <figure class="ml-3  inline-block align-middle">
+                <img src="../assets/image/admin.svg" />
+            </figure>
+            <a href="">محمد-پنل</a>
+        </nav>
+    </aside>
+    <!--main content-->
+    <main class="bg-blue-500 mt-4 w-4/5 ml-5">
+       <h1>main</h1>
+    </main>
+   </section>
 </body>
 </html>
