--- a/public/index.html
+++ b/public/index.html
@@ -55,8 +55,16 @@
         </nav>
     </aside>
     <!--main content-->
-    <main class="bg-blue-500 mt-4 w-4/5 ml-5">
-       <h1>main</h1>
+    <main class="mt-4 w-4/5 ml-5">
+      <header class="flex  bg-white rounded-2xl shadow-lg" >
+        <form onsubmit="return false" class="flex-1  m-0 p-3" >
+            <input type="text" placeholder="جست و جو" class="bg-gray-100 mr-2 rounded-3xl py-2 px-3 w-1/4 inline-block
+            focus:outline-none focus:ring-2 focus:ring-blue-500" />
+        </form>
+        <figure class="m-0 p-3 ml-2">
+            <img src="../assets/image/photo.jpg" width="40" class="rounded-full cursor-pointer" />
+        </figure>
+      </header>
     </main>
    </section>
 </body>
