--- a/public/users.html
+++ b/public/users.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="custome.css" />
-    <title>داشبورد</title>
+    <title>کاربران</title>
   </head>
   <body dir="rtl" class="bg-gray-100 font-vazir text-sm">
     <section class="flex h-screen overflow-hidden">
@@ -39,14 +39,12 @@
             </a>
           </li>
           <li
-            class="py-5 px-4 text-gray-500 cursor-pointer border-l-4 border-blue-500 hover:text-blue-500"
-            style="background: linear-gradient(0deg, #dbeafe 0, #f6f6f6 90%)"
+            class="py-5 px-4 text-gray-500 cursor-pointer hover:text-blue-500"
           >
             <figure class="ml-3 inline-block align-middle">
               <svg
                 class="h-5 w-5"
-                fill="#3b82f6"
-                stroke="#3b82f6"
+                fill="gray"
                 viewBox="0 0 2048 1792"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -58,15 +56,16 @@
             <a href="index.html">داشبورد</a>
           </li>
           <li
-            class="py-5 px-4 text-gray-500 cursor-pointer hover:text-blue-500"
+            class="py-5 px-4 text-gray-500 cursor-pointer border-l-4 border-blue-500 hover:text-blue-500"
+            style="background: linear-gradient(0deg, #dbeafe 0, #f6f6f6 90%);"
           >
             <figure class="ml-3 inline-block align-middle">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-5 w-5"
-                fill="currentColor"
+                fill="#3b82f6"
                 viewBox="0 0 24 24"
-                stroke="currentColor"
+                stroke="#3b82f6"
               >
                 <path
                   stroke-linecap="round"
@@ -136,7 +135,7 @@
                 ></path>
               </svg>
             </figure>
-            <a href="">ثبت نام</a>
+            <a href="">ثبت  نام</a>
           </li>
         </ul>
         <nav class="py-5 px-4">
@@ -165,55 +164,199 @@
           </figure>
         </header>
         <section id="scroll" class="max-h-full overflow-auto p-5 mt-5">
-          <div class="flex mt-16 text-white justify-between">
-            <div class="bg-blue-500 text-center py-4 px-24 rounded-b-lg">
+          <div class="flex bg-green-500 p-4 text-white rounded-lg">
+            <span class="text-lg cursor-pointer">×</span>
+            <nav class="text-center flex-1">
               <a>
-                <img src="../assets/image/download.svg" />
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="#fff"
+                  viewBox="0 0 24 24"
+                  class="h-5 w-5 inline-block"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
+                  ></path>
+                </svg>
+                این یک پیام موفقیت آمیز است.
               </a>
-              <h3 class="mt-4 text-2xl">۲۷۰۰</h3>
-              <h6 class="text-base">دانلود</h6>
-            </div>
-            <div class="bg-green-500 text-center py-4 px-24 rounded-b-lg">
-              <a>
-                <img src="../assets/image/employees-users-icon.svg" />
-              </a>
-              <h3 class="mt-4 text-2xl">۱۳۰۰</h3>
-              <h6 class="mt-2 text-base">کاربر</h6>
-            </div>
-            <div class="bg-yellow-500 text-center py-4 px-24 rounded-b-lg">
-              <a>
-                <img src="../assets/image/archive-files-icon.svg" />
-              </a>
-              <h3 class="mt-4 text-2xl">۷۴</h3>
-              <h6 class="mt-2 text-base">فایل</h6>
-            </div>
-            <div class="bg-indigo-500 text-center py-4 px-24 rounded-b-lg">
-              <a>
-                <img src="../assets/image/view-map-location-icon.svg" />
-              </a>
-              <h3 class="mt-4 text-2xl">۸۵</h3>
-              <h6 class="mt-2 text-base">مکان</h6>
-            </div>
+            </nav>
           </div>
-          <div class="mt-16">
-            <figure>
-              <img
-                src="../assets/image/quotation-mark-right-icon.svg"
-                class="mx-auto"
-                width="25"
+          <div class="flex p-4 text-gray-500 rounded-lg mt-10">
+            <span class="text-lg font-bold flex-1">کاربران</span>
+            <form onsubmit="return false" class="m-0">
+              <input
+                type="text"
+                placeholder="نام"
+                class="p-3 outline-none focus:ring-1 focus:ring-purple-600"
               />
-            </figure>
-            <p class="w-1/2 text-center mx-auto my-5 leading-6 text-lg">
-              این پروژه یک ادمین پنل ساده می باشد که با تیلوند توسعه داده شده
-              است.توسعه دهندگان عزیز میتوانند برحسب نیازشان از این پنل استفاده
-              کنند و اگر ایده ایی برای پیشرفت این پنل دارند روی آن پیاده سازی
-              کنند.امیدوارم از نحوه ی پیاده سازی این پنل لذت برده باشید.
-            </p>
+              <button
+                class="p-3 bg-purple-600 text-white relative left-1 rounded-l-md"
+              >
+                فیلتر
+              </button>
+            </form>
           </div>
-          <div class="w-16 h-1 my-5 bg-gray-500 mx-auto"></div>
-          <div class="text-center">
-            <p class="m-2">محمد میرزایی</p>
-            <p class="m-2 text-gray-500">توسعه دهنده وب</p>
+          <div class="bg-white rounded-xl shadow-lg">
+            <div class="grid grid-cols-1 divide-y">
+              <div class="flex p-4">
+                <p class="w-2/5">کاربر</p>
+                <p class="w-1/5">نقش</p>
+                <p class="w-1/5">تاریخ ساخت</p>
+                <p class="w-1/5">وضعیت</p>
+                <p class="w-1/5">اقدامات</p>
+              </div>
+              <div class="flex py-6 px-4">
+                <nav class="w-2/5">
+                  <img
+                    src="../assets/image/photo.jpg"
+                    width="40"
+                    class="rounded-full cursor-pointer inline-block align-middle"
+                  />
+                  <span class="mr-2">محمد میرزایی</span>
+                </nav>
+                <p class="w-1/5">ادمین</p>
+                <p class="w-1/5">۱۴۰۰-۰۷-۱۲</p>
+                <p class="w-1/5">
+                  <span
+                    class="bg-green-200 rounded-lg text-green-700 px-3 py-1 cursor-pointer"
+                    >فعال</span
+                  >
+                </p>
+                <p class="w-1/5">
+                  <span
+                    class="bg-red-200 rounded-lg text-red-700 px-3 py-1 cursor-pointer"
+                    >حذف</span
+                  >
+                  <span
+                    class="bg-blue-200 rounded-lg text-blue-700 px-3 py-1 cursor-pointer"
+                    >ویرایش</span
+                  >
+                </p>
+              </div>
+              <div class="flex py-6 px-4">
+                <nav class="w-2/5">
+                  <img
+                    src="../assets/image/photo.jpg"
+                    width="40"
+                    class="rounded-full cursor-pointer inline-block align-middle"
+                  />
+                  <span class="mr-2">محمد میرزایی</span>
+                </nav>
+                <p class="w-1/5">ادمین</p>
+                <p class="w-1/5">۱۴۰۰-۰۷-۱۲</p>
+                <p class="w-1/5">
+                  <span
+                    class="bg-green-200 rounded-lg text-green-700 px-3 py-1 cursor-pointer"
+                    >فعال</span
+                  >
+                </p>
+                <p class="w-1/5">
+                  <span
+                    class="bg-red-200 rounded-lg text-red-700 px-3 py-1 cursor-pointer"
+                    >حذف</span
+                  >
+                  <span
+                    class="bg-blue-200 rounded-lg text-blue-700 px-3 py-1 cursor-pointer"
+                    >ویرایش</span
+                  >
+                </p>
+              </div>
+              <div class="flex py-6 px-4">
+                <nav class="w-2/5">
+                  <img
+                    src="../assets/image/photo.jpg"
+                    width="40"
+                    class="rounded-full cursor-pointer inline-block align-middle"
+                  />
+                  <span class="mr-2">محمد میرزایی</span>
+                </nav>
+                <p class="w-1/5">ادمین</p>
+                <p class="w-1/5">۱۴۰۰-۰۷-۱۲</p>
+                <p class="w-1/5">
+                  <span
+                    class="bg-green-200 rounded-lg text-green-700 px-3 py-1 cursor-pointer"
+                    >فعال</span
+                  >
+                </p>
+                <p class="w-1/5">
+                  <span
+                    class="bg-red-200 rounded-lg text-red-700 px-3 py-1 cursor-pointer"
+                    >حذف</span
+                  >
+                  <span
+                    class="bg-blue-200 rounded-lg text-blue-700 px-3 py-1 cursor-pointer"
+                    >ویرایش</span
+                  >
+                </p>
+              </div>
+              <div class="flex py-6 px-4">
+                <nav class="w-2/5">
+                  <img
+                    src="../assets/image/photo.jpg"
+                    width="40"
+                    class="rounded-full cursor-pointer inline-block align-middle"
+                  />
+                  <span class="mr-2">محمد میرزایی</span>
+                </nav>
+                <p class="w-1/5">ادمین</p>
+                <p class="w-1/5">۱۴۰۰-۰۷-۱۲</p>
+                <p class="w-1/5">
+                  <span
+                    class="bg-green-200 rounded-lg text-green-700 px-3 py-1 cursor-pointer"
+                    >فعال</span
+                  >
+                </p>
+                <p class="w-1/5">
+                  <span
+                    class="bg-red-200 rounded-lg text-red-700 px-3 py-1 cursor-pointer"
+                    >حذف</span
+                  >
+                  <span
+                    class="bg-blue-200 rounded-lg text-blue-700 px-3 py-1 cursor-pointer"
+                    >ویرایش</span
+                  >
+                </p>
+              </div>
+              <div class="flex py-6 px-4">
+                <nav class="w-2/5">
+                  <img
+                    src="../assets/image/photo.jpg"
+                    width="40"
+                    class="rounded-full cursor-pointer inline-block align-middle"
+                  />
+                  <span class="mr-2">محمد میرزایی</span>
+                </nav>
+                <p class="w-1/5">ادمین</p>
+                <p class="w-1/5">۱۴۰۰-۰۷-۱۲</p>
+                <p class="w-1/5">
+                  <span
+                    class="bg-green-200 rounded-lg text-green-700 px-3 py-1 cursor-pointer"
+                    >فعال</span
+                  >
+                </p>
+                <p class="w-1/5">
+                  <span
+                    class="bg-red-200 rounded-lg text-red-700 px-3 py-1 cursor-pointer"
+                    >حذف</span
+                  >
+                  <span
+                    class="bg-blue-200 rounded-lg text-blue-700 px-3 py-1 cursor-pointer"
+                    >ویرایش</span
+                  >
+                </p>
+              </div>
+              <nav class="flex p-4 justify-center">
+                <a class="p-2 ring-1 ring-gray-300 cursor-pointer">قبلی</a>
+                <a class="p-2 ring-1 ring-gray-300 cursor-pointer">۱</a>
+                <a class="p-2 ring-1 ring-gray-300 cursor-pointer">۲</a>
+                <a class="p-2 ring-1 ring-gray-300 cursor-pointer">۳</a>
+                <a class="p-2 ring-1 ring-gray-300 cursor-pointer">بعدی</a>
+              </nav>
+            </div>
           </div>
           <div class="mb-24"></div>
         </section>
