--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li
-            class="py-5 px-4 text-gray-500 cursor-pointer border-l-4 border-blue-500 hover:text-blue-500"
+            class="py-5 px-4 font-bold text-blue-500 cursor-pointer border-l-4 border-blue-500 hover:text-blue-500"
             style="background: linear-gradient(0deg, #dbeafe 0, #f6f6f6 90%)"
           >
             <figure class="ml-3 inline-block align-middle">
@@ -93,7 +93,7 @@
                 ></path>
               </svg>
             </figure>
-            <a href="">فرم</a>
+            <a href="form.html">فرم</a>
           </li>
           <li
             class="py-5 px-4 text-gray-500 cursor-pointer hover:text-blue-500"
