--- a/public/form.html
+++ b/public/form.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="custome.css" />
-    <title>داشبورد</title>
+    <title>فرم</title>
   </head>
   <body dir="rtl" class="bg-gray-100 font-vazir text-sm">
     <section class="flex h-screen overflow-hidden">
@@ -120,7 +120,7 @@
                 </g>
               </svg>
             </figure>
-            <a href="">ورود</a>
+            <a href="login.html">ورود</a>
           </li>
           <li
             class="py-5 px-4 text-gray-500 cursor-pointer hover:text-blue-500"
@@ -137,7 +137,7 @@
                 ></path>
               </svg>
             </figure>
-            <a href="">ثبت نام</a>
+            <a href="register.html">ثبت نام</a>
           </li>
         </ul>
         <nav class="py-5 px-4">
