--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
                 </g>
               </svg>
             </figure>
-            <a href="">ورود</a>
+            <a href="login.html">ورود</a>
           </li>
           <li
             class="py-5 px-4 text-gray-500 cursor-pointer hover:text-blue-500"
@@ -136,7 +136,7 @@
                 ></path>
               </svg>
             </figure>
-            <a href="">ثبت نام</a>
+            <a href="register.html">ثبت نام</a>
           </li>
         </ul>
         <nav class="py-5 px-4">
@@ -156,7 +156,7 @@
               class="bg-gray-100 mr-2 rounded-3xl py-2 px-3 w-1/4 inline-block focus:outline-none focus:ring-2 focus:ring-blue-500"
             />
           </form>
-          <figure class="m-0 p-3 ml-2">
+          <figure class="m-0 p-3 ml-2 ">
             <img
               src="../assets/image/photo.jpg"
               width="40"
