--- a/public/users.html
+++ b/public/users.html
@@ -118,7 +118,7 @@
                 </g>
               </svg>
             </figure>
-            <a href="">ورود</a>
+            <a href="login.html">ورود</a>
           </li>
           <li
             class="py-5 px-4 text-gray-500 cursor-pointer hover:text-blue-500"
@@ -135,7 +135,7 @@
                 ></path>
               </svg>
             </figure>
-            <a href="">ثبت  نام</a>
+            <a href="register.html">ثبت  نام</a>
           </li>
         </ul>
         <nav class="py-5 px-4">
