make responsiv and fix some bugs

--- a/public/login.html
+++ b/public/login.html
@@ -7,10 +7,10 @@
     <title>ورود</title>
   </head>
   <body dir="rtl">
-    <section class="flex h-screen bg-gray-100 font-vazir text-sm items-center	">
+    <section class="flex h-screen bg-gray-100 font-vazir text-sm items-center">
       <form
         onsubmit="return false"
-        class="flex flex-col text-center w-1/3 h-50 mx-auto bg-white rounded-xl shadow-lg"
+        class="flex flex-col text-center md:w-1/3 w-2/3 h-50 mx-auto bg-white rounded-xl shadow-lg"
       >
         <p
           class="text-center py-6 px-4 text-gray-500 relative"
@@ -43,9 +43,11 @@
           value="ورود"
           class="outline-none p-3 m-3 mt-0 rounded-md bg-purple-700 text-white cursor-pointer"
         /><br />
-        <nav class="p-3  flex justify-between">
-            <a href="register.html" class="cursor-pointer text-purple-700 ">ثبت نام</a>
-            <a class="cursor-pointer text-gray-500">رمز عبور یادت رفته؟</a>
+        <nav class="p-3 flex justify-between">
+          <a href="register.html" class="cursor-pointer text-purple-700"
+            >ثبت نام</a
+          >
+          <a class="cursor-pointer text-gray-500">رمز عبور یادت رفته؟</a>
         </nav>
       </form>
     </section>
