--- a/public/register.html
+++ b/public/register.html
@@ -10,7 +10,7 @@
     <section class="flex h-screen bg-gray-100 font-vazir text-sm items-center">
       <form
         onsubmit="return false"
-        class="flex flex-col text-center w-1/3 h-50 mx-auto bg-white rounded-xl shadow-lg"
+        class="flex flex-col text-center md:w-1/3 w-2/3 h-50 mx-auto bg-white rounded-xl shadow-lg"
       >
         <p
           class="text-center py-6 px-4 text-gray-500 relative"
@@ -59,8 +59,8 @@
           value="ثبت نام"
           class="outline-none p-3 m-3 mt-0 rounded-md bg-purple-700 text-white cursor-pointer"
         /><br />
-        <nav class="p-2  flex justify-between">
-            <a href="index.html" class="cursor-pointer text-purple-700 ">خانه</a>
+        <nav class="p-2 flex justify-between">
+          <a href="index.html" class="cursor-pointer text-purple-700">خانه</a>
         </nav>
       </form>
     </section>
